Refactoring and general cleanup towards a useful release